src/test/resources/public/input/typechecking/fail/my_test_cases/my_fail24.jova
class Test{

}

class Main{
    public int x;
    Test test = new Test();

    public int notallowed() {
      return 0;
    }

    Main() {

    }

    public int main() {
        return 0;
    }
}